<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>sm_dancebot_office_ue</name>
  <version>2.2.2</version>
  <description>The dance_bot package</description>
  <maintainer email="pablo@ibrobotics.com">Pablo Inigo Blasco</maintainer>

  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>nav2z_client</depend>
  <depend>multirole_sensor_client</depend>
  <depend>navigation2</depend>
  <depend>nav2_bringup</depend>

  <depend>robot_state_publisher</depend>
  <depend>ros_publisher_client</depend>
  <depend>ros_timer_client</depend>
  <depend>slam_toolbox</depend>
  <depend>smacc2</depend>
  <depend>std_msgs</depend>
  <depend>sr_all_events_go</depend>
  <depend>sr_event_countdown</depend>
  <depend>sr_conditional</depend>
  <depend>visualization_msgs</depend>
  <depend>tf2</depend>
  <depend>ue_msgs</depend>
  
  <depend>backward_global_planner</depend>
  <depend>backward_local_planner</depend>
  <depend>forward_global_planner</depend>
  <depend>forward_local_planner</depend>
  <depend>nav2z_planners_common</depend>
  <depend>pure_spinning_local_planner</depend>
  <depend>undo_path_global_planner</depend>

  <buildtool_depend>rosidl_default_generators</buildtool_depend>
  <depend>action_msgs</depend>
  <member_of_group>rosidl_interface_packages</member_of_group>
  <exec_depend>rosidl_default_runtime</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
    <gazebo_ros gazebo_media_path="${prefix}/models" gazebo_model_path="${prefix}/models"/>
  </export>
</package>
